--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -1,5 +1,7 @@
+@import "../../styles/colors";
+
 .section {
-  padding: 30px 0 10px 0;
+  padding: 30px 0 0px 0;
 
   h1 {
     font-size: 20px;
@@ -9,8 +11,10 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    color: $primary_800;
 
     .icon {
+      color: $secondary;
       margin-right: 10px;
     }
   }
