--- a/src/components/Section/SectionItem/SectionItem.scss
+++ b/src/components/Section/SectionItem/SectionItem.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/colors";
 
 .section-item {
-  margin: 15px 0;
+  margin: 10px 0;
 
   p {
     margin: 2px 0;
